# ldclint

./: .gitignore  .gitmodules  README.md  build  build-test  meson.build
.github/workflows/: ci.yml
buildenv/: fetch-ldc-source  get-ldc-libdir
source/ldclint/: dparseast.d  options.d  plugin.d  scopetracker.d  visitors.d
source/ldclint/checks/: alignment.d  atproperty.d  boolbitwise.d  coherence.d  fortify.d  forwardref.d  mayoverflow.d  package.d  parser.d  redundant.d  stack.d  structs_ctor_postblit.d  structs_dtor_postblit.d  susderef.d  unused.d  unused_imports.d
source/ldclint/dmd/: ast.d  astutility.d  location.d  package.d  scopetracker.d  visitor.d
source/ldclint/dparse/: ast.d  package.d
source/ldclint/utils/: location.d  querier.d  report.d  visitor.d
tests/: lit.cfg.py  run
tests/bad/: classes.d  func.d  funcvars.d  imports.d  overflow.d  redundant.d  struct.d
tests/good/: classes.d  func.d  funcvars.d  imports.d  imports_public.d  overflow.d  struct.d
